[package]
name = "roster"
version = "0.1.0"
edition = "2021"
repository = "https://gitlab.ilabt.imec.be/contextaware/console"
authors = ["Stef Pletinck"]

[build-dependencies]
build-data = "0"

[dependencies]
egui = "0.28"
egui_extras = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
env_logger = "0.10"

[profile.release]
strip = true
